--- a/member/index.html
+++ b/member/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="container">
+        <h2>ข้อมูลสมาชิก</h2>
         <div id="memberInfo" class="card">
             ⏳ กำลังโหลดข้อมูลสมาชิก...
         </div>
         <button class="btn" onclick="liff.closeWindow()">ปิดหน้าต่าง</button>
+        <p class="notice">📌 หากต้องการแก้ไขข้อมูล กรุณาทักแชทหรือแจ้ง Admin</p>
     </div>
 
-    <!-- 🔹 โหลด JS ภายนอก -->
     <script src="script.js"></script>
 </body>
 </html>
