--- a/member/index.html
+++ b/member/index.html
@@ -15,12 +15,12 @@
     <div id="memberInfo" class="card"></div>
 
     <!-- ✅ ปุ่ม toggle ประวัติ -->
-    <button class="btn btn-secondary" id="toggleHistory">ดูประวัติการใช้บริการ ▼</button>
+    <button class="btn btn-toggle" id="toggleHistory">📂 ดูประวัติการใช้บริการ</button>
 
     <!-- ✅ พื้นที่แสดงประวัติ -->
     <div id="historySection" class="card hidden"></div>
 
-    <button class="btn" onclick="liff.closeWindow()">ปิดหน้าต่าง</button>
+    <button class="btn btn-close" onclick="liff.closeWindow()">ปิดหน้าต่าง</button>
     <p class="notice">📌 หากต้องการแก้ไขข้อมูล กรุณาทักแชทหรือแจ้ง Admin</p>
   </div>
 
