--- a/member/index.html
+++ b/member/index.html
@@ -14,6 +14,14 @@
 
     <div id="memberInfo" class="card"></div>
 
+    <div id="loadingOverlay" class="loading-overlay hidden">
+    <div class="loading-box">
+        <div class="spinner"></div>
+        <p>⏳ กำลังโหลดข้อมูลสมาชิก...</p>
+      </div>
+    </div>
+
+
     <!-- แถบกดดูประวัติ -->
     <button class="btn history-toggle" id="toggleHistory">▼ ดูประวัติการใช้บริการ</button>
 
