--- a/member/index.html
+++ b/member/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <button class="btn close small" onclick="liff.closeWindow()">ปิดหน้าต่าง</button>
-    <p class="notice">📌 หากต้องการแก้ไขข้อมูล กรุณาทักแชทหรือแจ้ง Admin</p>
+    <p class="notice">❕ หากต้องการแก้ไขข้อมูล กรุณาทักแชทหรือแจ้ง Admin</p>
   </div>
 
   <script src="script.js"></script>
