--- a/member/index.html
+++ b/member/index.html
@@ -47,6 +47,7 @@
       <button class="btn" onclick="closeQRSection()">❌ ปิด QR</button>
     </div>
   </div>
-
+  
+<script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
 </body>
 </html>
