--- a/member/index.html
+++ b/member/index.html
@@ -43,6 +43,7 @@
     <div class="card">
       <p><b>🔐 QR ยืนยันตัวตน</b></p>
       <canvas id="qrCanvas"></canvas>
+      <p id="qrUserInfo"></p>
       <p>หมดอายุใน <span id="qrCountdown">600</span> วินาที</p>
       <button class="btn" onclick="closeQRSection()">❌ ปิด QR</button>
     </div>
