--- a/member/index.html
+++ b/member/index.html
@@ -23,7 +23,7 @@
 
     <!-- แถบกดดูประวัติ -->
     <button class="btn history-toggle" id="toggleHistory">▼ ดูประวัติการใช้บริการ</button>
-    <button class="btn" onclick="showQRSection()">🔓 แสดง QR ยืนยันตัวตน</button>
+    <button class="btn" id="qrBtn" onclick="showQRSection()">🔓 แสดง QR ยืนยันตัวตน</button>
 
     <!-- พื้นที่แสดงประวัติ -->
     <div id="historySection" class="card hidden">
