--- a/admin/index.html
+++ b/admin/index.html
@@ -10,11 +10,18 @@
 <body>
   
   <div id="loadingOverlay" class="loading-overlay hidden">
-  <div class="loading-box">
-    <div class="spinner"></div>
-    <p>⏳ กำลังโหลดข้อมูล โปรดรอสักครู่...</p>
+    <div class="loading-box">
+      <div class="spinner"></div>
+      <p>⏳ กำลังโหลดข้อมูล โปรดรอสักครู่...</p>
+    </div>
   </div>
-</div>
+
+  <div class="container hidden" id="userView">
+    <h2>📌 ติดต่อร้าน / ข้อเสนอแนะ</h2>
+    <p>🕵️‍♀️ เราไม่สามารถยืนยันตัวตนของคุณว่าเป็นแอดมินได้</p>
+    <p>📞 กรุณาติดต่อผู้ดูแล หรือคลิกปุ่มด้านล่างเพื่อแสดงความคิดเห็น</p>
+    <a href="https://forms.gle/CV2VSAhvyB8tYUPc7" class="btn">✍️ ส่งข้อเสนอแนะ</a>
+  </div>
 
   <div class="container">
     <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
