--- a/admin/index.html
+++ b/admin/index.html
@@ -23,7 +23,7 @@
     <a href="https://forms.gle/CV2VSAhvyB8tYUPc7" class="btn">✍️ ส่งข้อเสนอแนะ</a>
   </div>
 
-  <div class="container">
+  <div class="container hidden" id="adminView">
     <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
     <p id="adminName">กำลังตรวจสอบสิทธิ์...</p>
     <div class="admin-menu hidden" id="adminMenu">
