--- a/admin/index.html
+++ b/admin/index.html
@@ -27,9 +27,15 @@
     <!-- ✅ เพิ่ม: Slide-down Feedback Panel -->
     <div id="feedbackPanel" class="hidden">
       <h3>✍️ ฟอร์มข้อเสนอแนะ</h3>
+      <label for="phoneInput">📱 เบอร์โทร</label>
       <input id="phoneInput" type="text" placeholder="เบอร์โทร" />
+      
+      <label for="scoreInput">⭐ คะแนน (1-5)</label>
       <input id="scoreInput" type="number" placeholder="คะแนนบริการ (1-5)" />
+      
+      <label for="feedbackInput">📝 ข้อเสนอแนะ</label>
       <textarea id="feedbackInput" placeholder="ข้อเสนอแนะของคุณ..."></textarea>
+
       <br>
       <button class="btn" id="submitFeedbackBtn">✅ ส่งข้อเสนอแนะ</button>
       <button class="btn" id="closeLiffBtn">❌ ปิดหน้าต่าง</button>
