--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,7 @@
   <title>เข้าสู่ระบบ</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
