--- a/admin/index.html
+++ b/admin/index.html
@@ -21,8 +21,8 @@
     <!--<p>🕵️‍♀️ ไม่สามารถยืนยันว่าเป็นแอดมินได้</p>-->
     <p><strong>Bird Car Care</strong></p>
     <p>ล้างรถ อัดฉีด ดูดฝุ่น ห้องเครื่อง ระบบแอร์รถยนต์ ช่วงล่าง</p>
-    <p>📞 <a href="tel:0867876441">086-787-6441</a> : <a href="tel:0867876441">086-787-6441</a> </p>
-    <p>📍 <a href="https://maps.app.goo.gl/VCh2PyR2myoD954V61">เทพกุญชร 10 ตำบล คลองหนึ่ง อำเภอคลองหลวง ปทุมธานี 12120</a></p>
+    <p>📞 <a href="tel:0867876441">086-787-6441</a> : <a href="tel:0947727755">094-772-7755</a> </p>
+    <p>📍 <a href="https://maps.app.goo.gl/VCh2PyR2myoD954V61">เทพกุญชร10 ต.คลองหนึ่ง อ.คลองหลวง จ.ปทุมธานี 12120</a></p>
     <p>⏰ เปิดบริการทุกวัน: 08:00 - 17:30</p>
     <p>**หยุดทักวันที่ 1 และ 2 ของทุกเดือน**</p>
 
