--- a/admin/index.html
+++ b/admin/index.html
@@ -24,7 +24,7 @@
     <p>📞 <a href="tel:0867876441">086-787-6441</a> : <a href="tel:0947727755">094-772-7755</a> </p>
     <p>📍 <a href="https://maps.app.goo.gl/S42pp9yoS9FZriR9A">เทพกุญชร10 ต.คลองหนึ่ง อ.คลองหลวง จ.ปทุมธานี 12120</a></p>
     <p>⏰ เปิดบริการทุกวัน: 08:00 - 17:30</p>
-    <p>**หยุดทักวันที่ 1 และ 2 ของทุกเดือน**</p>
+    <p>**หยุดวันที่ 1-2 ของทุกเดือน**</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2301.1199526043665!2d100.62503328617657!3d14.076761609775225!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d81000c308719%3A0x6bc6f5f62861f3b3!2z4LmA4Lia4Li04Lij4LmM4LiU4LiE4Liy4Lij4LmM4LmB4LiE4Lij4LmMIOC4quC4suC4guC4siAx!5e0!3m2!1sth!2sth!4v1748771775070!5m2!1sth!2sth" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
     <button id="openFeedbackBtn" class="btn">✍️ ส่งข้อเสนอแนะ</button>
