--- a/admin/index.html
+++ b/admin/index.html
@@ -17,9 +17,9 @@
   </div>
 
   <div class="container hidden" id="userView">
-    <h2>ติดต่อร้าน / ข้อเสนอแนะ</h2>
+    <h2>Bird CarCare</h2>
     <!--<p>🕵️‍♀️ ไม่สามารถยืนยันว่าเป็นแอดมินได้</p>-->
-    <p><strong>Bird Car Care</strong></p>
+    <p><strong>ติดต่อร้าน / ข้อเสนอแนะ</strong></p>
     <p>ล้างรถ อัดฉีด ดูดฝุ่น ห้องเครื่อง ระบบแอร์รถยนต์ ช่วงล่าง</p>
     <p>📞 <a href="tel:0867876441">086-787-6441</a> : <a href="tel:0947727755">094-772-7755</a> </p>
     <p>📍 <a href="https://maps.app.goo.gl/S42pp9yoS9FZriR9A">เทพกุญชร10 ต.คลองหนึ่ง อ.คลองหลวง จ.ปทุมธานี 12120</a></p>
