--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -15,7 +15,7 @@
     <div class="admin-buttons">
       <a class="btn" href="scan.html">🔍 สแกน QR เพื่อเพิ่มบริการ</a>
       <a class="btn" href="stats.html">📊 รายงาน/สถิติ</a>
-      <a class="btn hidden" id="settingsBtn" href="settings.html">⚙️ จัดการโปรโมชัน/ของรางวัล</a>
+      <a class="btn hidden" href="settings/index.html" data-menu="settings">⚙️ ตั้งค่า</a>
       <a class="btn" href="feedback.html">💬 ข้อเสนอแนะจากลูกค้า</a>
     </div>
   </div>
