--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -13,10 +13,10 @@
     <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
     <p class="admin-name">👤 คุณ: <span id="adminName">รอโหลดชื่อ...</span></p>
     <div class="admin-buttons">
-      <a class="btn" href="scan.html">🔍 สแกน QR เพื่อเพิ่มบริการ</a>
-      <a class="btn" href="stats.html">📊 รายงาน/สถิติ</a>
+      <a class="btn hidden" href="scan.html" data-menu="scan">🔍 สแกน QR เพื่อเพิ่มบริการ</a>
+      <a class="btn hidden" href="stats.html" data-menu="stats">📊 รายงาน/สถิติ</a>
       <a class="btn hidden" href="settings/index.html" data-menu="settings">⚙️ ตั้งค่า</a>
-      <a class="btn" href="feedback.html">💬 ข้อเสนอแนะจากลูกค้า</a>
+      <a class="btn hidden" href="feedback.html" data-menu="feedback">💬 ข้อเสนอแนะจากลูกค้า</a>
     </div>
   </div>
 </body>
