--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -2,14 +2,14 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>แผงควบคุมแอดมิน</title>
+  <title>____________</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js" defer></script>
 </head>
-<body>
+<body style="display:none;">
   <div class="container">
     <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
     <p class="admin-name">👤 คุณ: <span id="adminName">รอโหลดชื่อ...</span></p>
