--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
     <div class="profile">
-      <img id="adminPic" class="avatar" />
+      <!-- <img id="adminPic" class="avatar" /> -->
       <p>👤 คุณ: <span id="adminName">-</span></p>
       <p>🛡️ ระดับ: <span id="adminLevel">-</span></p>
       <p>📛 บทบาท: <span id="adminRole">-</span></p>
