--- a/info_ad/main_admin/settings/index.html
+++ b/info_ad/main_admin/settings/index.html
@@ -8,22 +8,25 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script src="script.js" defer></script>
 </head>
-<body style="display: none">
+<body style="display: none;">
   <div class="container">
-    <h2>⚙️ ตั้งค่าระบบ</h2>
-    <div class="admin-info">
-      <p>ระบบโดย: <span id="adminName">-</span> (<span id="adminLevel">-</span>)</p>
+    <h2 class="title">⚙️ เมนูตั้งค่าระบบ</h2>
+
+    <div class="profile-box">
+      <p>👤 คุณ: <span id="adminName">-</span></p>
+      <p>🛡️ ระดับ: <span id="adminLevel">-</span></p>
+      <p>📛 บทบาท: <span id="adminRole">-</span></p>
     </div>
 
-    <div class="menu-list">
-      <a href="services/index.html" class="btn">🚜 รายการบริการ</a>
-      <a href="promotions/index.html" class="btn">🎉 โปรโมชั่น</a>
-      <a href="users/index.html" class="btn">👥 ผู้ดูแล</a>
-      <a href="config/index.html" class="btn">🔧 ตั้งค่าพื้นฐ์</a>
-      <a href="backup/index.html" class="btn">📁 สำรองข้อมูล</a>
+    <div class="menu-buttons">
+      <a class="btn" href="services/index.html">🧼 บริการทั้งหมด</a>
+      <a class="btn" href="promotions/index.html">🎁 โปรโมชั่น</a>
+      <a class="btn" href="users/index.html">👥 ผู้ดูแลระบบ</a>
+      <a class="btn" href="config/index.html">🔧 ค่าระบบ</a>
+      <a class="btn" href="backup/index.html">📦 สำรองข้อมูล</a>
     </div>
 
-    <button onclick="goBack()" class="btn danger">🔙 ย้อนกลับ</button>
+    <button class="btn danger" onclick="logout()">🚪 ออกจากระบบ</button>
   </div>
 </body>
 </html>
