--- a/info_ad/main_admin/settings/index.html
+++ b/info_ad/main_admin/settings/index.html
@@ -26,7 +26,11 @@
       <a class="btn" href="backup/index.html">📦 สำรองข้อมูล</a>
     </div>
 
-    <button class="btn danger" onclick="logout()">🚪 ออกจากระบบ</button>
+    <div class="button-group">
+      <a class="btn outline" href="../main_admin.html">🔙 กลับหน้าหลัก</a>
+      <button class="btn danger" onclick="logout()">🚪 ออกจากระบบ</button>
+    </div>
+    
   </div>
 </body>
 </html>
