--- a/info_ad/main_admin/settings/index.html
+++ b/info_ad/main_admin/settings/index.html
@@ -6,6 +6,7 @@
   <title>ตั้งค่าระบบ</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js" defer></script>
 </head>
 <body style="display: none;">
