--- a/info_ad/main_admin/settings/index.html
+++ b/info_ad/main_admin/settings/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js" defer></script>
 </head>
-<body style="display: none;">
+<body class="hidden">
   <div class="container">
     <h2 class="title">⚙️ เมนูตั้งค่าระบบ</h2>
 
