--- a/info_ad/main_admin/settings/index.html
+++ b/info_ad/main_admin/settings/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="button-group">
-      <a class="btn outline" href="../main_admin/index.html">🔙 กลับหน้าหลัก</a>
+      <a class="btn outline" href="../index.html">🔙 กลับหน้าหลัก</a>
       <button class="btn danger" onclick="logout()">🚪 ออกจากระบบ</button>
     </div>
     
