--- a/info_ad/main_admin/settings/services/index.html
+++ b/info_ad/main_admin/settings/services/index.html
@@ -16,15 +16,15 @@
     </div>
 
     <div class="button-group">
-      <button class="btn" onclick="openAddPopup()">➕ เพิ่มบริการ</button>
-      <button class="btn" onclick="toggleServiceList()">📋 ดูรายการทั้งหมด</button>
+      <button id="addServiceBtn" class="btn">➕ เพิ่มบริการ</button>
+      <button id="showAllBtn" class="btn">📋 ดูรายการทั้งหมด</button>
     </div>
 
     <div id="serviceList" class="hidden service-list"></div>
 
     <div class="button-group bottom">
-      <a class="btn outline" href="../index.html">🔙 กลับหน้าหลัก</a>
-      <button class="btn danger" onclick="logout()">🚪 ออกจากระบบ</button>
+      <a id="backBtn" class="btn outline" href="../index.html">🔙 กลับหน้าหลัก</a>
+      <button id="logoutBtn" class="btn danger">🚪 ออกจากระบบ</button>
     </div>
   </div>
 
