--- a/info_ad/main_admin/settings/services/index.html
+++ b/info_ad/main_admin/settings/services/index.html
@@ -1,3 +1,4 @@
+<!-- ปรับโครงหน้า HTML ตามการตรวจสอบล่าสุด -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -11,24 +12,28 @@
 </head>
 <body class="hidden">
   <div class="container">
-    <div class="admin-info">
+    <!-- Admin Info -->
+    <div class="profile-box">
       <p>👤 <span id="adminName">-</span> | 🛡️ <span id="adminLevel">-</span> | 📛 <span id="adminRole">-</span></p>
     </div>
 
+    <!-- Action Buttons -->
     <div class="button-group">
       <button id="addServiceBtn" class="btn">➕ เพิ่มบริการ</button>
       <button id="showAllBtn" class="btn">📋 ดูรายการทั้งหมด</button>
     </div>
 
+    <!-- Service List -->
     <div id="serviceList" class="hidden service-list"></div>
 
+    <!-- Bottom Navigation -->
     <div class="button-group bottom">
       <a id="backBtn" class="btn outline" href="../index.html">🔙 กลับหน้าหลัก</a>
       <button id="logoutBtn" class="btn danger">🚪 ออกจากระบบ</button>
     </div>
   </div>
 
-  <!-- เพิ่มบริการ -->
+  <!-- Add Service Popup -->
   <div id="addPopup" class="popup hidden">
     <div class="popup-content">
       <h2>➕ เพิ่มบริการใหม่</h2>
@@ -43,7 +48,7 @@
     </div>
   </div>
 
-  <!-- แสดง/แก้ไขรายละเอียดบริการ -->
+  <!-- View/Edit Service Popup -->
   <div id="viewPopup" class="popup hidden">
     <div class="popup-content">
       <h2 id="popupTitle">📄 รายละเอียดบริการ</h2>
