--- a/info_ad/main_admin/settings/services/index.html
+++ b/info_ad/main_admin/settings/services/index.html
@@ -21,6 +21,7 @@
     <div class="button-group">
       <button id="addServiceBtn" class="btn">➕ เพิ่มบริการ</button>
       <button id="showAllBtn" class="btn">📋 ดูรายการทั้งหมด</button>
+      <button id="filterActiveBtn" class="btn outline">🟢 เฉพาะที่เปิดใช้งาน</button>
     </div>
 
     <!-- Service List -->
