--- a/info_ad/main_admin/settings/services/index.html
+++ b/info_ad/main_admin/settings/services/index.html
@@ -63,6 +63,7 @@
       <div class="popup-actions">
         <button id="editBtn" onclick="toggleEditMode()">✏️ แก้ไข</button>
         <button id="saveBtn" class="hidden" onclick="saveEditedService()">💾 บันทึก</button>
+        <button class="danger" onclick="deleteService()">🗑️ ลบ</button>
         <button class="danger" onclick="closeViewPopup()">❌ ปิด</button>
       </div>
     </div>
