--- a/info_ad/main_admin/scan/index.html
+++ b/info_ad/main_admin/scan/index.html
@@ -16,6 +16,7 @@
   <h2>📷 สแกน QR Code ลูกค้า</h2>
   <div id="reader" style="width: 300px;"></div>
   <button id="openCameraBtn" onclick="startCamera()">เปิดกล้อง</button>
+  <p id="scanHint" style="color:gray;">📡 กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
 
   <hr />
 
